--- a/scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/thymus_coexpression_type1_type17.Rmd
+++ b/scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/thymus_coexpression_type1_type17.Rmd
@@ -311,24 +311,72 @@ PlotCoexpression <- function(seuratobj,
 # ANALYSIS
 
 ## Score gene signatures
+Gene signatures from literature
+```{r}
+mait1_garner <- c("BCL2", "CCL4", "CCL4L2", "CXCR3", "FGL2", "GIMAP5", "HLA-E", "IL2RB", "INPP4B", "KLRB1", "KLRC1", "KLRC2", "KLRC3", "KLRC4", "KLRD1", "NKG7", "SLAMF7", "XCL1", "XCL2")
+mait1_bugaut <- c(
+  "CD8A",
+  "KLRC1",
+  "KLRD1",
+  "SAMD3",
+  "PLAC8",
+  "IL12RB2",
+  "IFNG",
+  "KLRB1C",
+  "SERPINA3G",
+  "FASL",
+  "KLRK1",
+  "TBX21",
+  "SLAMF7",
+  "ZFP683",
+  "ART2B",
+  "LY6C2",
+  "XCL1",
+  "CCL5",
+  "NKG7"
+)
+mait17_garner <- c("AQP3", "AVPI1", "BLK", "CCR2", "CCR6", "CD7", "EMB", "ICOS", "IL17RE", "IL1R1", "IL23R", "IL7R", "ITGAE", "MAF", "PXDC1", "RORC", "S100A4", "SERPINB1", "TNFRSF25")
+mait17_bugaut <- c(
+  "RORC",
+  "SLC27A6",
+  "IL17RB",
+  "TMEM176B",
+  "ITGAE",
+  "IL23R",
+  "SERPINB1A",
+  "MMP25",
+  "1700040D17RIK",
+  "PXDC1",
+  "IL1R1",
+  "LING04",
+  "CCR8",
+  "CCR6",
+  "CYSLTR1",
+  "LTB4R1"
+)
+```
+
+
 ```{r score-gene-signatures}
 gene_signatures <- list(
   "type1"=c("EOMES", "GZMK", "CCL5", "TBX21", "NKG7", "GZMA"),
-  "type17"=c("RORC", "RORA", "CCR6", "IL23R", "BLK", "SCART1")
+  "type17"=c("RORC", "RORA", "CCR6", "IL23R", "BLK", "SCART1"),
+  "type1_new"=c("EOMES", "GZMK", "CCL5", "TBX21", "NKG7", "GZMA", "PRF1", "IFNG", "KLRD1", "KLRC1", "SLAMF7", "XCL1", "IL2RB"),
+  "type17_new"=c("RORC", "RORA", "CCR6", "IL23R", "BLK", "SCART1", "IL1R1", "ITGAE", "SERPINB1", "IL7R", "IL17RE")
 )
 
 # score
 seur_integrated <- AddModuleScore(seur_integrated, features=gene_signatures, name=names(gene_signatures), seed=1)
-colnames(seur_integrated@meta.data)[32:33] <- names(gene_signatures)
+colnames(seur_integrated@meta.data)[32:35] <- names(gene_signatures)
 seur_thym <- lapply(seur_thym, function(x) AddModuleScore(x, features=gene_signatures, name=names(gene_signatures), seed=1))
-colnames(seur_thym$nkt@meta.data)[78:79] <- names(gene_signatures)
-colnames(seur_thym$mait@meta.data)[78:79] <- names(gene_signatures)
-colnames(seur_thym$gdt@meta.data)[78:79] <- names(gene_signatures)
+colnames(seur_thym$nkt@meta.data)[78:81] <- names(gene_signatures)
+colnames(seur_thym$mait@meta.data)[78:81] <- names(gene_signatures)
+colnames(seur_thym$gdt@meta.data)[78:81] <- names(gene_signatures)
 
 # add the type 1 and type 17 scored on integrated object in the individual thymic objects
-seur_thym$nkt@meta.data[,c("type1_integrated", "type17_integrated")] <- seur_integrated@meta.data[rownames(seur_integrated@meta.data) %in% rownames(seur_thym$nkt@meta.data),c("type1", "type17")]
-seur_thym$mait@meta.data[,c("type1_integrated", "type17_integrated")] <- seur_integrated@meta.data[rownames(seur_integrated@meta.data) %in% rownames(seur_thym$mait@meta.data),c("type1", "type17")]
-seur_thym$gdt@meta.data[,c("type1_integrated", "type17_integrated")] <- seur_integrated@meta.data[rownames(seur_integrated@meta.data) %in% rownames(seur_thym$gdt@meta.data),c("type1", "type17")]
+seur_thym$nkt@meta.data[,c("type1_integrated", "type17_integrated", "type1_new_integrated", "type17_new_integrated")] <- seur_integrated@meta.data[rownames(seur_integrated@meta.data) %in% rownames(seur_thym$nkt@meta.data),c("type1", "type17", "type1_new", "type17_new")]
+seur_thym$mait@meta.data[,c("type1_integrated", "type17_integrated", "type1_new_integrated", "type17_new_integrated")] <- seur_integrated@meta.data[rownames(seur_integrated@meta.data) %in% rownames(seur_thym$mait@meta.data),c("type1", "type17", "type1_new", "type17_new")]
+seur_thym$gdt@meta.data[,c("type1_integrated", "type17_integrated", "type1_new_integrated", "type17_new_integrated")] <- seur_integrated@meta.data[rownames(seur_integrated@meta.data) %in% rownames(seur_thym$gdt@meta.data),c("type1", "type17", "type1_new", "type17_new")]
 ```
 
 Check how the type1 and type17 scores correlate when they're scored on individual thymic seurat objects versus on the integrated seurat object.
@@ -336,46 +384,76 @@ Check how the type1 and type17 scores correlate when they're scored on individua
 # make dataframe
 df <- rbind(
   as.data.frame(seur_thym$nkt@meta.data) %>%
-    select(type1, type1_integrated, type17, type17_integrated, cell_annot) %>%
+    select(type1, type1_integrated, type17, type17_integrated, type1_new, type1_new_integrated, type17_new, type17_new_integrated, cell_annot) %>%
     mutate(tcell_lineage="iNKT"),
   as.data.frame(seur_thym$mait@meta.data) %>%
-    select(type1, type1_integrated, type17, type17_integrated, cell_annot) %>%
+    select(type1, type1_integrated, type17, type17_integrated, type1_new, type1_new_integrated, type17_new, type17_new_integrated, cell_annot) %>%
     mutate(tcell_lineage="MAIT"),
   as.data.frame(seur_thym$gdt@meta.data) %>%
-    select(type1, type1_integrated, type17, type17_integrated, cell_annot) %>%
+    select(type1, type1_integrated, type17, type17_integrated, type1_new, type1_new_integrated, type17_new, type17_new_integrated, cell_annot) %>%
     mutate(tcell_lineage="GD")
 ) %>%
   dplyr::rename(cluster_per_lineage=cell_annot)
 
+summary(df)
+
 ggplot(df, aes(x=type1, y=type1_integrated))+
   geom_point()+
+  xlim(-0.4, 3)+
+  ylim(-1.1, 2.3)+
   facet_wrap(~tcell_lineage)+
   labs(x="Signature scored on thymic object", y="Signature scored on integrated object", title="Type 1 signature")
 
+ggplot(df, aes(x=type1_new, y=type1_new_integrated))+
+  geom_point()+
+  xlim(-0.4, 3)+
+  ylim(-1.1, 2.3)+
+  facet_wrap(~tcell_lineage)+
+  labs(x="Signature scored on thymic object", y="Signature scored on integrated object", title="Type 1 signature (new)")
+
 ggplot(df, aes(x=type17, y=type17_integrated))+
   geom_point()+
+  xlim(-0.4, 3)+
+  ylim(-1.1, 2.3)+
   facet_wrap(~tcell_lineage)+
   labs(x="Signature scored on thymic object", y="Signature scored on integrated object", title="Type 17 signature")
+
+ggplot(df, aes(x=type17_new, y=type17_new_integrated))+
+  geom_point()+
+  xlim(-0.4, 3)+
+  ylim(-1.1, 2.3)+
+  facet_wrap(~tcell_lineage)+
+  labs(x="Signature scored on thymic object", y="Signature scored on integrated object", title="Type 17 signature (new)")
+
+# check out old versus new signature
+ggplot(df, aes(x=type1_integrated, y=type1_new_integrated))+
+  geom_point()+
+  facet_wrap(~tcell_lineage)+
+  labs(x="Type 1 old", y="Type 1 new", title="Type 1 signature (old vs new)")
+ggplot(df, aes(x=type17_integrated, y=type17_new_integrated))+
+  geom_point()+
+  facet_wrap(~tcell_lineage)+
+  labs(x="Type 17 old", y="Type 17 new", title="Type 17 signature (old vs new)")
 ```
 
 Overall the scores correlate pretty well, the only difference is that scores from integrated object are lower than scores from separate thymic objects (especially for type 1 signature). Theoretically, scoring the gene signatures on the integrated object would be better as it contains a more diverse set of cells, and so it would provide better "background" genes (for control). Let's keep the scores from integrated object.
 
 ```{r}
 # remove scores computed on each seurat object individually
-seur_thym$nkt@meta.data[,c("type1", "type17")] <- NULL
-seur_thym$mait@meta.data[,c("type1", "type17")] <- NULL
-seur_thym$gdt@meta.data[,c("type1", "type17")] <- NULL
+seur_thym$nkt@meta.data[,c("type1", "type17", "type1_new", "type17_new")] <- NULL
+seur_thym$mait@meta.data[,c("type1", "type17", "type1_new", "type17_new")] <- NULL
+seur_thym$gdt@meta.data[,c("type1", "type17", "type1_new", "type17_new")] <- NULL
 
 # rename scores computed on integrated seurat object
-colnames(seur_thym$nkt@meta.data)[78:79] <- c("type1", "type17")
-colnames(seur_thym$mait@meta.data)[78:79] <- c("type1", "type17")
-colnames(seur_thym$gdt@meta.data)[78:79] <- c("type1", "type17")
+colnames(seur_thym$nkt@meta.data)[78:81] <- c("type1", "type17", "type1_new", "type17_new")
+colnames(seur_thym$mait@meta.data)[78:81] <- c("type1", "type17", "type1_new", "type17_new")
+colnames(seur_thym$gdt@meta.data)[78:81] <- c("type1", "type17", "type1_new", "type17_new")
 ```
 
 
 
 ## Plot coexpression of type 1/type 17 on scatter plot
-```{r coexpression-scatterplot, fig.width=10, fig.height=5}
+```{r coexpression-scatterplot, fig.width=5, fig.height=8}
 # update color vector names
 names(cols_thym_nkt) <- gsub('iNKT_thymus_', 'NKT_', names(cols_thym_nkt))
 names(cols_thym_mait) <- gsub('thymus_', '', names(cols_thym_mait))
@@ -384,14 +462,14 @@ names(cols_thym_gdt) <- gsub('thymus_', '', names(cols_thym_gdt))
 ggplot(
   df %>% filter(cluster_per_lineage %in% c("NKT_c5", "NKT_c6", "MAIT_c6", "GDT_c7")),
   # df,
-  aes(x=type1_integrated, y=type17_integrated, color=cluster_per_lineage)
+  aes(x=type1_new_integrated, y=type17_new_integrated, color=cluster_per_lineage)
 )+
   geom_point()+
   facet_wrap(~factor(tcell_lineage, levels=c("iNKT", "MAIT", "GD")), ncol=1)+
   scale_color_manual(values=c(cols_thym_nkt, cols_thym_mait, cols_thym_gdt))+
   labs(x="Type 1 signature", y="Type 17 signature")+
   theme_cowplot()
-ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/scatterplot_coexpression_vertical.pdf", width=6, height=10)
+# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/scatterplot_coexpression_vertical_newsignature.pdf", width=6, height=10)
 ```
 
 Check what proportion of MAIT_c6 cells have a type 1 and type 17 signature above 0
@@ -417,7 +495,7 @@ So about 35% of MAIT_c6 cells have a positive type 1 and type 17 scores.
 # iNKT
 PlotCoexpression(
   seuratobj = seur_thym$nkt,
-  features = c("type1", "type17"),
+  features = c("type1_new", "type17_new"),
   set_negative_scores_to_0 = T, # whether to have negative signature scores set to 0 (negative scores mean that signature genes are expressed less than control genes)
   plotting = "blend",
   pt_size=2,
@@ -428,12 +506,12 @@ PlotCoexpression(
   colmatrix_stepsize=100, # how many steps in the color matrix
   order=T # whether to order cells
 )
-# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/coexpression_nkt.pdf", width=5, height=5)
+# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/coexpression_nkt_newsignature.pdf", width=5, height=5)
 
 # MAIT
 PlotCoexpression(
   seuratobj = seur_thym$mait,
-  features = c("type1", "type17"),
+  features = c("type1_new", "type17_new"),
   set_negative_scores_to_0 = T,
   plotting = "blend",
   matrix_coordinates = c(0.7, 0.06),
@@ -444,13 +522,13 @@ PlotCoexpression(
   colmatrix_stepsize=100,
   order=T
 )
-# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/coexpression_mait.pdf", width=5, height=5)
+# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/coexpression_mait_newsignature.pdf", width=5, height=5)
 
 
 # GD
 PlotCoexpression(
   seuratobj = seur_thym$gdt,
-  features = c("type1", "type17"),
+  features = c("type1_new", "type17_new"),
   set_negative_scores_to_0 = T,
   plotting = "blend",
   matrix_coordinates = c(0, 0),
@@ -461,24 +539,129 @@ PlotCoexpression(
   colmatrix_stepsize=100,
   order=T
 )
-# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/coexpression_gdt.pdf", width=5, height=5)
+# ggsave("./scripts-in-progress/human-thymus/HumanThymus_26_coexpression_type1_type17/plots/coexpression_gdt_newsignature.pdf", width=5, height=5)
 ```
 
 
 ```{r, fig.height=5, fig.width=5}
-PlotCoexpression(
-  seuratobj = seur_thym$gdt,
-  features = c("type1", "type17"),
-  set_negative_scores_to_0 = T,
-  plotting = "blend",
-  matrix_coordinates = c(0.7, 0.06),
-  pt_size = 1,
-  cols.neg="#d9d9d9",
-  cols.pos=c("red", "blue"),
-  col.threshold=0.1,
-  colmatrix_stepsize=100,
-  order=T
-)
+BlendMatrix <- function(
+    n = 100,
+    col.threshold = 0.1,
+    two.colors = c("red", "blue"),
+    negative.color = "#d9d9d9",
+    sig_a = 1,
+    sig_b = 0,
+    multipl=5
+) {
+  if (0 > col.threshold || col.threshold > 1) {
+    stop("col.threshold must be between 0 and 1")
+  }
+  C0 <- as.vector(col2rgb(negative.color, alpha = TRUE))
+  C1 <- as.vector(col2rgb(two.colors[1], alpha = TRUE))
+  C2 <- as.vector(col2rgb(two.colors[2], alpha = TRUE))
+  blend_alpha <- (C1[4] + C2[4])/2
+  C0 <- C0[-4]
+  C1 <- C1[-4]
+  C2 <- C2[-4]
+  sigmoid <- function(x) {
+    return(1 / (1 + exp(-x)))
+  }
+  blend_color <- function(
+    i,
+    j,
+    col.threshold,
+    n,
+    C0,
+    C1,
+    C2,
+    alpha
+  ) {
+    c.min <- pracma::sigmoid(x=5 * (1 / n - col.threshold), a=sig_a, b=sig_b) # 0.61
+    c.max <- pracma::sigmoid(x=5 * (1 - col.threshold), a=sig_a, b=sig_b) # 0.99
+    c1_weight <- pracma::sigmoid(multipl * (i / n - col.threshold)) # 0.61, 0.72, 0.81, ...
+    c2_weight <- pracma::sigmoid(multipl * (j / n - col.threshold)) # 0.61, 0.72, 0.81, ...
+    c0_weight <-  pracma::sigmoid(multipl * ((i + j) / (2 * n) - col.threshold)) # 0.61, 0.67, 0.72, ...
+    c1_weight <- (c1_weight - c.min) / (c.max - c.min) # 0, 0.29, 0.53, ...
+    c2_weight <- (c2_weight - c.min) / (c.max - c.min) # 0, 0.29, 0.53, ...
+    c0_weight <- (c0_weight - c.min) / (c.max - c.min) # 0, 0.16, 0.29, ...
+    C1_length <- sqrt(sum((C1 - C0) ** 2)) # 309 DOESN'T CHANGE ANYTHING
+    C2_length <- sqrt(sum((C2 - C0) ** 2)) # 309 DOESN'T CHANGE ANYTHING
+    C1_unit <- (C1 - C0) / C1_length # [0.1228866 -0.7017474 -0.7017474  0.0000000]
+    C2_unit <- (C2 - C0) / C2_length # [-0.7017474 -0.7017474  0.1228866  0.0000000]
+    C1_weight <- C1_unit * c1_weight # [0 0 0 0], [0.036 -0.204 -0.204  0.000], [0.065 -0.372 -0.372  0.000]
+    C2_weight <- C2_unit * c2_weight # [0 0 0 0], [0.036 -0.204 -0.204  0.000], [0.065 -0.372 -0.372  0.000]
+    C_blend <- C1_weight * (i - 1) * C1_length / (n - 1) + C2_weight * (j - 1) * C2_length / (n - 1) + (i - 1) * (j - 1) * c0_weight * C0 / (n - 1) ** 2 + C0
+    C_blend[C_blend > 255] <- 255
+    C_blend[C_blend < 0] <- 0
+    return(rgb(
+      red = C_blend[1],
+      green = C_blend[2],
+      blue = C_blend[3],
+      alpha = alpha,
+      maxColorValue = 255
+    ))
+  }
+  blend_matrix <- matrix(nrow = n, ncol = n)
+  for (i in 1:n) {
+    for (j in 1:n) {
+      blend_matrix[i, j] <- blend_color(
+        i = i,
+        j = j,
+        col.threshold = col.threshold,
+        n = n,
+        C0 = C0,
+        C1 = C1,
+        C2 = C2,
+        alpha = blend_alpha
+      )
+    }
+  }
+  return(blend_matrix)
+}
+
+
+# PlotCoexpression(
+#   seuratobj = seur_thym$gdt,
+#   features = c("type1", "type17"),
+#   set_negative_scores_to_0 = T,
+#   plotting = "blend",
+#   matrix_coordinates = c(0.7, 0.06),
+#   pt_size = 1,
+#   cols.neg="#d9d9d9",
+#   cols.pos=c("red", "blue"),
+#   col.threshold=0.5,
+#   colmatrix_stepsize=100,
+#   order=T
+# )
+```
+
+
+```{r, fig.width=2, fig.height=2}
+color.matrix <- BlendMatrix(
+    sig_a=1,
+    sig_b=0,
+    n=100
+  )
+
+BlendMap(color.matrix, step=100, xtext="color1", ytext="color2")
+
+color.matrix <- BlendMatrix(
+    sig_a=1,
+    sig_b=10,
+    n=100,
+    multipl=5
+  )
+
+BlendMap(color.matrix, step=100, xtext="color1", ytext="color2")
+
+color.matrix <- BlendMatrix(
+    sig_a=1,
+    sig_b=10,
+    n=100,
+    multipl=100
+  )
+
+BlendMap(color.matrix, step=100, xtext="color1", ytext="color2")
 ```
 
 
